--- a/PregnancyProject/PregnancyProject/Storyboards/Base.lproj/Main.storyboard
+++ b/PregnancyProject/PregnancyProject/Storyboards/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                     <constraint firstAttribute="height" constant="221" id="yH1-fW-Ewu"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="2K5-g8-qOQ" customClass="PregnancyTableViewCell" customModule="PregnancyProject" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="pregnancyCell" rowHeight="80" id="2K5-g8-qOQ" customClass="PregnancyTableViewCell" customModule="PregnancyProject" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2K5-g8-qOQ" id="xAV-8q-RE6">
@@ -120,7 +120,7 @@
                                 <rect key="frame" x="16" y="375" width="343" height="235"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="Kfj-fJ-VEF" customClass="ChildTableViewCell" customModule="PregnancyProject" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="childCell" rowHeight="80" id="Kfj-fJ-VEF" customClass="ChildTableViewCell" customModule="PregnancyProject" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kfj-fJ-VEF" id="MYW-lm-FlV">
